--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,25 @@
 
     {% compressed_css "main-css" %}
 
+    {# Webfont async loading #}
+    <script>
+        WebFontConfig = {
+            google: {
+              families: ['Source Sans Pro', 'Droid Serif']
+            }
+        };
+
+        (function() {
+            var wf = document.createElement('script');
+            wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+                      '://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js';
+            wf.type = 'text/javascript';
+            wf.async = 'true';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(wf, s);
+        })();
+    </script>
+
     {# for additionnal css in some pages #}
     {% block extracss %}{% endblock %}
 
