Icônes éditeur temporaire

--- a/assets/css/scss/_form.scss
+++ b/assets/css/scss/_form.scss
@@ -68,6 +68,11 @@
                 outline-color: #C0392B;
             }
         }
+
+        &[disabled] {
+            background: #DDD !important;
+            color: #555;
+        }
     }
     input,
     textarea,
