Suppression sidebar sur pages erreur

--- a/templates/403.html
+++ b/templates/403.html
@@ -20,6 +20,12 @@
 
 
 
+{# No sidebar on this page #}
+{% block body_class %}no-sidebar{% endblock %}
+{% block sidebar %}{% endblock %}
+
+
+
 {% block content %}
     <p>
         Vous n'avez pas les droits suffisants pour accéder à cette page.
