--- a/templates/404.html
+++ b/templates/404.html
@@ -20,6 +20,12 @@
 
 
 
+{# No sidebar on this page #}
+{% block body_class %}no-sidebar{% endblock %}
+{% block sidebar %}{% endblock %}
+
+
+
 {% block content %}
     <p>
         Il semblerait que ce que vous cherchiez ne se trouve plus ici.
