--- a/templates/500.html
+++ b/templates/500.html
@@ -20,6 +20,12 @@
 
 
 
+{# No sidebar on this page #}
+{% block body_class %}no-sidebar{% endblock %}
+{% block sidebar %}{% endblock %}
+
+
+
 {% block content %}
     <p>
         Si vous voyez cette page, c'est que vous avez trouvé un bug. Merci
