--- a/templates/article/view.html
+++ b/templates/article/view.html
@@ -1,4 +1,4 @@
-{% extends "article/base.html" %}
+{% extends "article/base_content.html" %}
 {% load emarkdown %}
 {% load captureas %}
 {% load profile %}
