--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
     {% compressed_css "main-css" %}
 
     {# Webfont async loading #}
+    {# Do not put this code into a distant file #}
     <script>
         WebFontConfig = {
             google: {
