--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -40,8 +40,8 @@ $modal-margin: 25px;
 // Font Famillies
 $font-sans-serif: "Segoe UI", "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
 $font-serif: "Liberation Serif", "Times New Roman", Times, Georgia, FreeSerif, serif;
-$font-sans-serif-active: "Source Sans Pro", "Segoe UI", sans-serif;
-$font-serif-active: "Droid Serif", serif;
+$font-sans-serif-active: "Source Sans Pro", $font-sans-serif;
+$font-serif-active: "Droid Serif", $font-serif;
 
 
 /**
