Templates plus sémantiques

--- a/templates/article/reaction/edit.html
+++ b/templates/article/reaction/edit.html
@@ -17,8 +17,7 @@
 
 
 {% block headline %}
-    <h2>{{article.title}}</h2>
-    <h3 class="subtitle">Editer une réponse</h3>
+    Editer une réponse à l'article : {{article.title}}
 {% endblock %}
 
 
