--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -22,39 +22,41 @@
 
 
 
-{% block headline %}
-    <h2>Liste des tutoriels</h2>
-{% endblock %}
+{% block content_out %}
+    <section class="full-content-wrapper">
+        <h2 class="ico-after ico-tutorials">
+            {% block headline %}
+                Liste des tutoriels
+            {% endblock %}
+        </h2>
 
-
-
-{% block content_after %}
-    {% if tutorials %}
-        <div class="tutorial-list">
-            {% for tutorial in tutorials %}
-                <article>
-                    <a href="{{ tutorial.get_absolute_url_online }}">
-                        <img src="{{ tutorial.image.thumb.url }}" alt="" class="tutorial-img avatar">
-                        <div class="tutorial-infos">
-                            <h3>{{ tutorial.title }}</h3>
-                            
-                            <span class="article-metadata">
-                                {% if tutorial.subcategory %}
-                                    {% for category in tutorial.subcategory.all %}
-                                        {{ category.title }}                                    
-                                    {% endfor %}
-                                {% endif %}
-                            </span>
-                        </div>
-                    </a>
-                </article>
-            {% endfor %}
-        </div>
-    {% else %}
-        <p>
-            Aucun tutoriel disponible.
-        </p>
-    {% endif %}
+        {% if tutorials %}
+            <div class="tutorial-list">
+                {% for tutorial in tutorials %}
+                    <article>
+                        <a href="{{ tutorial.get_absolute_url_online }}">
+                            <img src="{{ tutorial.image.thumb.url }}" alt="" class="tutorial-img avatar">
+                            <div class="tutorial-infos">
+                                <h3>{{ tutorial.title }}</h3>
+                                
+                                <span class="article-metadata">
+                                    {% if tutorial.subcategory %}
+                                        {% for category in tutorial.subcategory.all %}
+                                            {{ category.title }}                                    
+                                        {% endfor %}
+                                    {% endif %}
+                                </span>
+                            </div>
+                        </a>
+                    </article>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>
+                Aucun tutoriel disponible.
+            </p>
+        {% endif %}
+    </section>
 {% endblock %}
 
 
