--- a/templates/tutorial/validation/history.html
+++ b/templates/tutorial/validation/history.html
@@ -18,7 +18,7 @@
 
 
 {% block headline %}
-    <h1>Historique de validation</h1>
+    Historique de validation
 {% endblock %}
 
 
@@ -82,6 +82,8 @@
             </tbody>
         </table>
     {% else %}
-        <p>Ce tutoriel n'a jamais été soumis en validation.</p>
+        <p>
+            Ce tutoriel n'a jamais été soumis en validation.
+        </p>
     {% endif %}
 {% endblock %}
