--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -12,93 +12,94 @@
 
 
 
+{% block body_class %}content-cols{% endblock %}
+
+
+
 {% block breadcrumb %}
-    <li class="current">{{ usr.username }}</li>
+    <li>{{ usr.username }}</li>
 {% endblock %}
 
 
 
-{% block headline %}
-    {{ usr.username }}
-{% endblock %}
+{% block content_out %}
+    <section class="content-col-2">
+        <h2>
+            {{ usr.username }}
+        </h2>
 
+        <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
 
-{# TODO : Tout est à faire :( #}
-{% block content %}
-    <img src="{{ profile.get_avatar_url }}" alt="Avatar"/>
-    {% with status=usr|state %}
-        {% if status == 'BAN'%}
-            <div class="alert-box tiny alert username">{{status}}</div>
-        {% endif %}
-        {% if status == 'LS'%}
-            <div class="alert-box tiny warning username">{{status}}</div>
-        {% endif %}
-        {% if status == 'STAFF' %}
-            <div class="alert-box tiny success username">{{status}}</div>
-        {% endif %}
-    {% endwith %}
+        {% include 'misc/badge.part.html' %}
 
-
-    <p>
-        Inscrit {{ usr.date_joined|format_date }}, dernière connexion {{ usr.last_login|format_date }}.
-    </p>
-    {% if perms.member.show_ip %}
         <p>
-            Dernière IP : {{ profile.last_ip_address }}
+            Inscrit {{ usr.date_joined|format_date }}
         </p>
         <p>
-            Ville : {{ profile.get_city }}
+            Dernière connexion {{ usr.last_login|format_date }}
         </p>
-    {% endif %}
-    <p>
-        <a class="tiny button secondary" href="{% url "zds.mp.views.new" %}?username={{usr.username}}">Envoyer un MP</a>
-    </p>
+        {% if perms.member.show_ip %}
+            <p>
+                Dernière IP : {{ profile.last_ip_address }}
+            </p>
+            <p>
+                Ville : {{ profile.get_city }}
+            </p>
+        {% endif %}
 
-    {% if profile.show_email and user.is_authenticated %}
-        <p>
-            <span class="fi-mail">  {{ usr.email|obfuscate_mailto }}</span>
-        </p>
-    {% endif %}
+        {% if profile.show_email and user.is_authenticated %}
+            <p>
+                E-mail : <span class="fi-mail">{{ usr.email|obfuscate_mailto }}</span>
+            </p>
+        {% endif %}
 
-
-    {% if profile.sign %}
-        <h3>Signature</h3>
-        {{ profile.sign|emarkdown }}
-    {% endif %}
-
-
-    {% if tutorials %}
-        <h2 class="box tutoriel">Dernier tutoriels</h2>
-        {% for tutorial in tutorials %}
-            <img src="{{ tutorial.image.thumb.url }}" alt="">
-
-            <h4><a href="{{ tutorial.get_absolute_url_online }}">{{ tutorial.title }}</a></h4>
-            <h5>{{ tutorial.description }}</h5>
-        {% endfor %}
-    {% endif %}
+        {% if profile.sign %}
+            <h3>Signature</h3>
+            {{ profile.sign|emarkdown }}
+        {% endif %}
 
 
-    {% if articles %}
-        <h2 class="box article">Dernier articles</h2>
-        {% for article in articles %}
-            <h4><a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a></h4>
-            <h5>{{ article.description }}</h5>
-        {% endfor %}
-    {% endif %}
+        {% if topics %}
+            <h2>Dernier sujets crées</h2>
+            {% for topic in topics %}
+                <h4><a href="{{ topic.get_absolute_url }}">{{ topic.title }}</a></h4>
+                <h5>{{ topic.subtitle }}</h5>
+            {% endfor %}
+        {% endif %}
+    </section>
 
 
-    {% if topics %}
-        <h2 class="box forum">Dernier sujets crées</h2>
-        {% for topic in topics %}
-            <h4><a href="{{ topic.get_absolute_url }}">{{ topic.title }}</a></h4>
-            <h5>{{ topic.subtitle }}</h5>
-        {% endfor %}
-    {% endif %}
+
+    <section class="content-col-2">
+        {% if tutorials %}
+            <h2 class="ico-after ico-tutorials">Derniers tutoriels</h2>
+            {% for tutorial in tutorials %}
+                <img src="{{ tutorial.image.thumb.url }}" alt="" class="tutorial-img avatar">
+
+                <h4><a href="{{ tutorial.get_absolute_url_online }}">{{ tutorial.title }}</a></h4>
+                <h5>{{ tutorial.description }}</h5>
+            {% endfor %}
+        {% endif %}
+
+
+        {% if articles %}
+            <h2 class="ico-after ico-articles">Derniers articles</h2>
+            {% for article in articles %}
+                {% include 'article/includes/article_item.part.html' %}
+            {% endfor %}
+        {% endif %}
+    </section>
+
 
 
     {% if profile.biography %}
-        <h2 class="box forum">Biographie</h2>
-        {{ profile.biography|emarkdown }}
+        <section class="full-content-wrapper">
+            <h2>
+                Biographie
+            </h2>
+
+            {{ profile.biography|emarkdown }}
+        </section>
     {% endif %}
 {% endblock %}
 
@@ -106,10 +107,20 @@
 
 {% block sidebar_actions %}
     {% ifequal profile.user user %}
-        <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
+        <div>
+            <h3>Mon compte</h3>
+            <ul>
+                <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
+            </ul>
+        </div>
     {% endifequal %}
 
     {% if user.is_authenticated %}
-        <li><a href="{% url "zds.mp.views.new"%}?username={{ usr.username }}">Message privé</a></li>
+        <div class="mobile-menu-bloc mobile-all-links" data-title="Actions">
+            <h3>Actions</h3>
+            <ul>
+                <li><a href="{% url "zds.mp.views.new"%}?username={{ usr.username }}">Envoyer un message privé</a></li>
+            </ul>
+        </div>
     {% endif %}
 {% endblock %}
