--- a/templates/forum/includes/topic_row.part.html
+++ b/templates/forum/includes/topic_row.part.html
@@ -21,10 +21,10 @@
     </div>
     {% with profile=topic.author|profile %}
         <div class="topic-description" style="background-image: url({{ profile.get_avatar_url }})">
-            <a href="{{ topic.get_absolute_url }}" class="navigable-link">
+            <a href="{{ topic.get_absolute_url }}" class="topic-title-link navigable-link">
                 <span class="topic-title">{{ topic.title }}</span>
+                <span class="topic-subtitle">{{ topic.subtitle }}</span>
             </a>
-            <span class="topic-subtitle">{{ topic.subtitle }}</span>
             <p class="topic-members">
                 <span class="topic-members-label">Créé par</span>
                 <em>
