Légères modifs font size

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -1589,6 +1589,9 @@
         border-bottom: 1px solid $orange;
         text-transform: uppercase;
         font-weight: normal;
+        font-size: 22px;
+        font-size: 2.2rem;
+        line-height: 30px;
     }
 }
 .wf-active .main .content-container .article-content {
