Factorisation tuto item + profile

--- a/assets/css/scss/_extra-wide.scss
+++ b/assets/css/scss/_extra-wide.scss
@@ -19,7 +19,7 @@
         margin-left: 5%;
     }
 
-    body:not(.home) .tutorial-list article {
+    .full-content-wrapper .tutorial-list article {
         width: 29.3%;
     }
 }
