--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -311,7 +311,7 @@
         }
     }
 
-    body:not(.home) .tutorial-list article {
+    .full-content-wrapper .tutorial-list article {
         width: 46%;
         float: left;
     }
