--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -883,6 +883,10 @@
             width: 50px;
             height: 50px;
         }
+
+        &:not(:first-child) {
+            margin-top: 50px;
+        }
     }
 
     .subtitle {
