--- a/templates/home.html
+++ b/templates/home.html
@@ -69,22 +69,7 @@
         
         {% if last_tutorials %}
             {% for tutorial in last_tutorials %}
-                <article>
-                    <a href="{{ tutorial.get_absolute_url_online }}">
-                        <img src="{{ tutorial.image.thumb.url }}" alt="" class="tutorial-img avatar">
-                        <div class="tutorial-infos">
-                            <h3>{{ tutorial.title }}</h3>
-                            
-                            <span class="article-metadata">
-                                {% if tutorial.subcategory %}
-                                    {% for category in tutorial.subcategory.all %}
-                                        {{ category.title }}                                    
-                                    {% endfor %}
-                                {% endif %}
-                            </span>
-                        </div>
-                    </a>
-                </article>
+                {% include 'tutorial/includes/tutorial_item.part.html' %}
             {% endfor %}
         {% endif %}
         
