--- a/templates/article/includes/article_item.part.html
+++ b/templates/article/includes/article_item.part.html
@@ -1,8 +1,15 @@
 {% load date %}
-
+{% load captureas %}
 
 
 <article>
+    {% if not link %}
+        {# Public link by default #}
+        {% captureas link %}
+            {{ article.get_absolute_url_online }}
+        {% endcaptureas %}
+    {% endif %}
+
     <a href="{{ link }}">
         {% if article.thumbnail %}
             <img src="{{ article.thumbnail.url }}" alt="" class="tutorial-img avatar">
