Fix resolution des alertes + CSS modales

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -2084,6 +2084,8 @@ form.topic-message {
     left: 0;
     background: #EEE;
     min-height: 220px;
+    font-size: 16px;
+    font-size: 1.6rem;
 
     .modal-title {
         display: block;
