--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -111,7 +111,12 @@
             {% url "zds.tutorial.views.dislike_note" %}?message={{ message.pk }}
         {% endcaptureas %}
 
-        {% include 'misc/message.part.html' with perms_change=perms.tutorial.change_note topic=tutorial %}
+        {% captureas alert_solve_link %}
+            {% url "zds.tutorial.views.solve_alert" %}
+        {% endcaptureas %}
+
+
+        {% include "misc/message.part.html" with perms_change=perms.tutorial.change_note topic=tutorial %}
     {% endfor %}
 
 
