--- a/templates/article/view.html
+++ b/templates/article/view.html
@@ -161,5 +161,5 @@
         {% url 'zds.article.views.answer' %}?article={{ article.pk }}
     {% endcaptureas %}
 
-    {% include "misc/message_form.html" with member=user %}
+    {% include "misc/message_form.html" with member=user topic=article %}
 {% endblock %}
