added an (ugly) "Reader mode" button

--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -230,6 +230,8 @@
         .content-container {
             width: 80%;
             margin-right: 0;
+            
+            @include single-transition(width, $reader-mode-transition-duration);
 
             h1,
             h2 {
