--- a/templates/base_content_page.html
+++ b/templates/base_content_page.html
@@ -4,6 +4,8 @@
 
 {% block content_out %}
     <article class="content-wrapper">
+        {# TODO: Do something more classy #}
+        <button id="readerModeBtn" class="btn-grey">Reader Mode</button>
         <header>
             {% block headline %}{% endblock %}
         </header>
