--- a/templates/forum/topic/new.html
+++ b/templates/forum/topic/new.html
@@ -25,7 +25,9 @@
 
 
 {% block content %}
-    {% crispy form %}
+	<div data-solved-topics-url="{% url "zds.forum.views.complete_topic" %}">
+   		{% crispy form %}
+    </div>
 
     {% if text %}
         {% include "misc/previsualization.part.html" %}
