--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -80,19 +80,17 @@
                                             ico-after
 
                                             {% if topic.is_solved %}
-                                                tick active
-                                            {% endif %}
-                                            {% if topic.is_locked %}
+                                                tick green
+                                            {% elif topic.is_locked %}
                                                 lock
+                                            {% else %}
+                                                star yellow
                                             {% endif %}
                                         {% endif %}"
                                        {% if topic.is_solved or topic.is_locked %}
                                         data-prefix="
                                             {% if topic.is_solved %}
                                                 Résolu
-                                            {% endif %}
-                                            {% if topic.is_solved and topic.is_locked %}
-                                            |
                                             {% endif %}
                                             {% if topic.is_locked %}
                                                 Fermé
